poms - removed warnings (versions) - now really running IT tests